Примеры конфигов для Кубика/cube-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: application
spec:
  selector:
    matchLabels:
      app: postgres-db
  serviceName: "postgres-db"
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-db
          mountPath: /var/lib/postgresql/data
          # subPath: data
  volumeClaimTemplates:
  - metadata:
      name: postgres-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "rook-ceph-block"
      resources:
        requests:
          storage: 2Gi
