Примеры конфигов для Кубика/cube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: application
  labels:
    app: api-application
    env: Production
    owner: AntonYaskov
spec:
  replicas: 1
  selector:
    matchLabels:
      project: api
  template:
    metadata:
      labels:
        project: api
    spec:
      containers:
        - name: application-back
          image: 
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: application
  labels:
    app: front-application
    env: Production
    owner: AntonYaskov
spec:
  replicas: 1
  selector:
    matchLabels:
      project: front
  template:
    metadata:
      labels:
        project: front
    spec:
      containers:
        - name: application-front
          image: 
          ports:
            - containerPort: 80
